<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F39"
    android:onClick="onClickShowHide"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/noto_sans_bold"
        android:letterSpacing="0.016"
        android:text="@string/splash_screen_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/city" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="311dp"
        android:layout_height="538dp"
        android:layout_marginTop="28dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/rectangle_white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/form_name"
        android:textColor="#38385E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/form_name_hint"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textColorHint="#B1B8C7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/form_phone"
        android:textColor="#38385E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/form_phone_hint"
        android:inputType="number|numberDecimal|numberSigned"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textColorHint="#B1B8C7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/form_password"
        android:textColor="#38385E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text"
        android:ems="10"
        android:hint="@string/form_password_hint"
        android:inputType="text|textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textColorHint="#B1B8C7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/form_password_retype"
        android:textColor="#38385E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edRetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_text"
        android:ems="10"
        android:hint="@string/form_password_retype_hint"
        android:inputType="text|textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textColorHint="#B1B8C7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imgHideShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClickShowHide"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toTopOf="@+id/edPassword"
        app:srcCompat="@drawable/show" />

    <ImageView
        android:id="@+id/imgHideShowRetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClickShowHideRetype"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edRetypePassword"
        app:layout_constraintTop_toTopOf="@+id/edRetypePassword"
        app:srcCompat="@drawable/show" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#3845AB"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/button_sign_up"
        android:textSize="14sp"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edRetypePassword"
        app:toggleCheckedStateOnClick="false" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/description_sign_up"
        android:textColor="#78829D"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="46dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/description_sign_up_link"
        android:textColor="#3845AB"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>