<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdInfoActivity">

    <ImageView
        android:id="@+id/imgThird"
        android:layout_width="414dp"
        android:layout_height="501dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/third_screen" />

    <TextView
        android:id="@+id/tvTitleThird"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/title_third_screen"
        android:textColor="#3845AB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgThird" />

    <ImageView
        android:id="@+id/lineThird"
        android:layout_width="82dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleThird"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitleThird"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleThird"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/tvDesThird"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/description_first_screen"
        android:textColor="#1F1F39"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lineThird"
        app:layout_constraintTop_toBottomOf="@+id/lineThird" />

    <ImageView
        android:id="@+id/imgNavThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesThird"
        app:srcCompat="@drawable/navigation_third" />

    <Button
        android:id="@+id/btBackThird"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:backgroundTint="#3845AB"
        android:fontFamily="@font/noto_sans"
        android:text="@string/back"
        android:textSize="14sp"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNavThird" />

</androidx.constraintlayout.widget.ConstraintLayout>